sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: illegal start of simple expression
      for(i<-0 to getNomebreValleurs()-2);
                                         ^